# CMakeThirdPartyExamples

./: CMakeLists.txt  README.md
CMakeModules/: FindMatplotLib.cmake
PlottingTest/: CMakeLists.txt
PlottingTest/src/: main.cpp
